ColinFay published a site update

--- a/references.html
+++ b/references.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard" />
 
 
-<meta name="date" content="2020-04-27" />
+<meta name="date" content="2020-04-28" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -195,52 +195,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 
 <div id="refs" class="references">
 <div>
-<p>Allaire, JJ. 2018. <em>Config: Manage Environment Specific Configuration Values</em>. <a href="https://CRAN.R-project.org/package=config">https://CRAN.R-project.org/package=config</a>.</p>
-</div>
-<div>
-<p>Attali, Dean, and Tristan Edwards. 2018. <em>Shinyalert: Easily Create Pretty Popup Messages (Modals) in ’Shiny’</em>. <a href="https://CRAN.R-project.org/package=shinyalert">https://CRAN.R-project.org/package=shinyalert</a>.</p>
-</div>
-<div>
-<p>Bengtsson, Henrik. 2018. <em>Profmem: Simple Memory Profiling for R</em>. <a href="https://CRAN.R-project.org/package=profmem">https://CRAN.R-project.org/package=profmem</a>.</p>
-</div>
-<div>
-<p>———. 2019. <em>R.cache: Fast and Light-Weight Caching (Memoization) of Objects and Results to Speed up Computations</em>. <a href="https://CRAN.R-project.org/package=R.cache">https://CRAN.R-project.org/package=R.cache</a>.</p>
-</div>
-<div>
-<p>———. 2020. <em>Future: Unified Parallel and Distributed Processing in R for Everyone</em>. <a href="https://CRAN.R-project.org/package=future">https://CRAN.R-project.org/package=future</a>.</p>
-</div>
-<div>
 <p>Boettiger, Carl, and Dirk Eddelbuettel. 2017. “An Introduction to Rocker: Docker Containers for R.” <em>The R Journal</em> 9 (2): 527–36. <a href="https://doi.org/10.32614/RJ-2017-065">https://doi.org/10.32614/RJ-2017-065</a>.</p>
-</div>
-<div>
-<p>Chang, Winston. 2020. <em>Chromote: Headless Chrome Web Browser Interface</em>.</p>
-</div>
-<div>
-<p>Chang, Winston, Joe Cheng, JJ Allaire, Yihui Xie, and Jonathan McPherson. 2020. <em>Shiny: Web Application Framework for R</em>. <a href="https://CRAN.R-project.org/package=shiny">https://CRAN.R-project.org/package=shiny</a>.</p>
-</div>
-<div>
-<p>Chang, Winston, and Gábor Csárdi. 2019. <em>Shinytest: Test Shiny Apps</em>. <a href="https://CRAN.R-project.org/package=shinytest">https://CRAN.R-project.org/package=shinytest</a>.</p>
-</div>
-<div>
-<p>Chang, Winston, Javier Luraschi, and Timothy Mastny. 2019. <em>Profvis: Interactive Visualizations for Profiling R Code</em>. <a href="https://CRAN.R-project.org/package=profvis">https://CRAN.R-project.org/package=profvis</a>.</p>
-</div>
-<div>
-<p>Cheng, Joe. 2019. <em>Promises: Abstractions for Promise-Based Asynchronous Programming</em>. <a href="https://CRAN.R-project.org/package=promises">https://CRAN.R-project.org/package=promises</a>.</p>
-</div>
-<div>
-<p>Coene, John. 2020. <em>FullPage: Three Families of Functions for Three Different Single Page ’Shiny’ Apps</em>. <a href="https://github.com/RinteRface/fullPage">https://github.com/RinteRface/fullPage</a>.</p>
-</div>
-<div>
-<p>Cooley, David. 2020. <em>Geojsonsf: GeoJSON to Simple Feature Converter</em>. <a href="https://CRAN.R-project.org/package=geojsonsf">https://CRAN.R-project.org/package=geojsonsf</a>.</p>
-</div>
-<div>
-<p>Csardi, Gabor. 2016. <em>Cyclocomp: Cyclomatic Complexity of R Code</em>. <a href="https://CRAN.R-project.org/package=cyclocomp">https://CRAN.R-project.org/package=cyclocomp</a>.</p>
-</div>
-<div>
-<p>———. 2020. <em>PackageMetrics2: Collect Metrics About R Packages</em>. <a href="http://git.mango.local/gcsardi/packageMetrics2">http://git.mango.local/gcsardi/packageMetrics2</a>.</p>
-</div>
-<div>
-<p>Csárdi, Gábor. 2019. <em>Liteq: Lightweight Portable Message Queue Using ’Sqlite’</em>. <a href="https://CRAN.R-project.org/package=liteq">https://CRAN.R-project.org/package=liteq</a>.</p>
 </div>
 <div>
 <p>Csárdi, Gábor, and Winston Chang. 2020. <em>Processx: Execute and Control System Processes</em>. <a href="https://CRAN.R-project.org/package=processx">https://CRAN.R-project.org/package=processx</a>.</p>
@@ -249,73 +204,10 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <p>Csárdi, Gábor, Kirill Müller, and Jim Hester. 2018. <em>Desc: Manipulate Description Files</em>. <a href="https://CRAN.R-project.org/package=desc">https://CRAN.R-project.org/package=desc</a>.</p>
 </div>
 <div>
-<p>Dipert, Alan, Barret Schloerke, and Barbara Borges. 2020. <em>Shinyloadtest: Load Test Shiny Applications</em>. <a href="https://CRAN.R-project.org/package=shinyloadtest">https://CRAN.R-project.org/package=shinyloadtest</a>.</p>
-</div>
-<div>
-<p>Dowle, Matt, and Arun Srinivasan. 2019. <em>Data.table: Extension of ‘Data.frame‘</em>. <a href="https://CRAN.R-project.org/package=data.table">https://CRAN.R-project.org/package=data.table</a>.</p>
-</div>
-<div>
 <p>Eddelbuettel, Dirk, Romain Francois, JJ Allaire, Kevin Ushey, Qiang Kou, Nathan Russell, Douglas Bates, and John Chambers. 2020. <em>Rcpp: Seamless R and C++ Integration</em>. <a href="https://CRAN.R-project.org/package=Rcpp">https://CRAN.R-project.org/package=Rcpp</a>.</p>
 </div>
 <div>
-<p>Fay, Colin. 2019a. <em>Attempt: Tools for Defensive Programming</em>. <a href="https://CRAN.R-project.org/package=attempt">https://CRAN.R-project.org/package=attempt</a>.</p>
-</div>
-<div>
-<p>———. 2019b. <em>Dockerfiler: Easy Dockerfile Creation from R</em>. <a href="https://CRAN.R-project.org/package=dockerfiler">https://CRAN.R-project.org/package=dockerfiler</a>.</p>
-</div>
-<div>
-<p>———. 2020a. <em>Bubble: Launch and Interact with a Nodejs Session</em>.</p>
-</div>
-<div>
-<p>———. 2020b. <em>Crrry: ’Crrri’ Recipes for ’Shiny’</em>. <a href="https://github.com/ColinFay/crrry">https://github.com/ColinFay/crrry</a>.</p>
-</div>
-<div>
-<p>———. 2020c. <em>Dockerstats: A Wrapper Around ’Docker Stats’</em>. <a href="https://github.com/ColinFay/dockerstats">https://github.com/ColinFay/dockerstats</a>.</p>
-</div>
-<div>
-<p>———. 2020d. <em>Gargoyle: An Event-Based Framework for ’Shiny’</em>.</p>
-</div>
-<div>
-<p>———. 2020e. <em>Glouton: ’JS-Cookies’ for ’Shiny’</em>.</p>
-</div>
-<div>
-<p>———. 2020f. <em>Hexmake: Hex Stickers Maker</em>. <a href="https://github.com/colinfay/hexmake">https://github.com/colinfay/hexmake</a>.</p>
-</div>
-<div>
-<p>———. 2020g. <em>Nessy: A ’Nes’ Css for ’Shiny’</em>. <a href="https://github.com/ColinFay/nessy">https://github.com/ColinFay/nessy</a>.</p>
-</div>
-<div>
-<p>———. 2020h. <em>Resume: Bootstrap Resume Template for ’Shiny’</em>.</p>
-</div>
-<div>
-<p>———. 2020i. <em>Skeleton: Skeleton Css for Shiny</em>.</p>
-</div>
-<div>
-<p>———. 2020j. <em>Tidytuesday201942: A Golem App for Tidy Tuesday</em>. <a href="http://www.github.com/ColinFay/tidytuesday201942">http://www.github.com/ColinFay/tidytuesday201942</a>.</p>
-</div>
-<div>
-<p>Fay, Colin, and Sebastien Rochette. 2020a. <em>Fakir: Create Fake Data in R for Tutorials</em>. <a href="https://github.com/Thinkr-open/fakir">https://github.com/Thinkr-open/fakir</a>.</p>
-</div>
-<div>
-<p>———. 2020b. <em>Shinipsum: Lorem-Ipsum-Like Helpers for Fast Shiny Prototyping</em>. <a href="https://github.com/Thinkr-open/shinipsum">https://github.com/Thinkr-open/shinipsum</a>.</p>
-</div>
-<div>
-<p>Garnier, Simon. 2018. <em>Viridis: Default Color Maps from ’Matplotlib’</em>. <a href="https://CRAN.R-project.org/package=viridis">https://CRAN.R-project.org/package=viridis</a>.</p>
-</div>
-<div>
 <p>Gillespie, Colin, and Robin Lovelace. 2017. <em>Efficient R Programming</em>. O’Reilly Media, Inc, USA.</p>
-</div>
-<div>
-<p>Granjon, David. 2019a. <em>Bs4Dash: A ’Bootstrap 4’ Version of ’Shinydashboard’</em>. <a href="https://CRAN.R-project.org/package=bs4Dash">https://CRAN.R-project.org/package=bs4Dash</a>.</p>
-</div>
-<div>
-<p>———. 2019b. <em>ShinydashboardPlus: Add More ’Adminlte2’ Components to ’Shinydashboard’</em>. <a href="https://CRAN.R-project.org/package=shinydashboardPlus">https://CRAN.R-project.org/package=shinydashboardPlus</a>.</p>
-</div>
-<div>
-<p>Granjon, David, Victor Perrier, and Isabelle Rudolf. 2019. <em>ShinyMobile: Mobile Ready ’Shiny’ Apps with Standalone Capabilities</em>. <a href="https://CRAN.R-project.org/package=shinyMobile">https://CRAN.R-project.org/package=shinyMobile</a>.</p>
-</div>
-<div>
-<p>Guyader, Vincent, Colin Fay, Sébastien Rochette, and Cervan Girard. 2020. <em>Golem: A Framework for Robust Shiny Applications</em>. <a href="https://github.com/ThinkR-open/golem">https://github.com/ThinkR-open/golem</a>.</p>
 </div>
 <div>
 <p>Guyader, Vincent, and Sébastien Rochette. 2020. <em>Attachment: Deal with Dependencies</em>. <a href="https://CRAN.R-project.org/package=attachment">https://CRAN.R-project.org/package=attachment</a>.</p>
@@ -324,13 +216,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <p>Henry, Lionel, and Hadley Wickham. 2020. <em>Purrr: Functional Programming Tools</em>. <a href="https://CRAN.R-project.org/package=purrr">https://CRAN.R-project.org/package=purrr</a>.</p>
 </div>
 <div>
-<p>Hester, Jim. 2020. <em>Bench: High Precision Timing of R Expressions</em>. <a href="https://CRAN.R-project.org/package=bench">https://CRAN.R-project.org/package=bench</a>.</p>
-</div>
-<div>
-<p>Hester, Jim, Gábor Csárdi, Hadley Wickham, Winston Chang, Martin Morgan, and Dan Tenenbaum. 2020. <em>Remotes: R Package Installation from Remote Repositories, Including ’Github’</em>.</p>
-</div>
-<div>
-<p>Hester, Jim, and Hadley Wickham. 2020. <em>Vroom: Read and Write Rectangular Text Data Quickly</em>. <a href="https://CRAN.R-project.org/package=vroom">https://CRAN.R-project.org/package=vroom</a>.</p>
+<p>Hester, Jim, Gábor Csárdi, Hadley Wickham, Winston Chang, Martin Morgan, and Dan Tenenbaum. 2020. <em>Remotes: R Package Installation from Remote Repositories, Including ’Github’</em>. <a href="https://CRAN.R-project.org/package=remotes">https://CRAN.R-project.org/package=remotes</a>.</p>
 </div>
 <div>
 <p>Kim, Gene. 2016. <em>The Devops Handbook: How to Create World-Class Agility, Reliability, and Security in Technology Organizations</em>. IT Revolution Press. <a href="https://www.xarg.org/ref/a/1942788002/">https://www.xarg.org/ref/a/1942788002/</a>.</p>
@@ -339,58 +225,19 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <p>Krug, Steve. 2014. <em>Don’t Make Me Think, Revisited: A Common Sense Approach to Web Usability (3rd Edition) (Voices That Matter)</em>. New Riders.</p>
 </div>
 <div>
-<p>Lesur, Romain, and Christophe Dervieux. 2020. <em>Crrri: An Interface with Headless Chromium/Chrome</em>.</p>
-</div>
-<div>
-<p>Lumley, Thomas. 2013. <em>Dichromat: Color Schemes for Dichromats</em>. <a href="https://CRAN.R-project.org/package=dichromat">https://CRAN.R-project.org/package=dichromat</a>.</p>
-</div>
-<div>
-<p>Müller, Kirill. 2017. <em>Here: A Simpler Way to Find Your Files</em>. <a href="https://CRAN.R-project.org/package=here">https://CRAN.R-project.org/package=here</a>.</p>
-</div>
-<div>
-<p>Müller, Kirill, Hadley Wickham, David A. James, and Seth Falcon. 2020. <em>RSQLite: ’SQLite’ Interface for R</em>. <a href="https://CRAN.R-project.org/package=RSQLite">https://CRAN.R-project.org/package=RSQLite</a>.</p>
-</div>
-<div>
 <p>Nüst, Daniel, Dirk Eddelbuettel, Dom Bennett, Robrecht Cannoodt, Dav Clark, Gergely Daroczi, Mark Edmondson, et al. 2020. “The Rockerverse: Packages and Applications for Containerization with R.”</p>
 </div>
 <div>
 <p>Ooms, Jeroen. 2014. “The Jsonlite Package: A Practical and Consistent Mapping Between Json Data and R Objects.” <em>arXiv:1403.2805 [stat.CO]</em>. <a href="https://arxiv.org/abs/1403.2805">https://arxiv.org/abs/1403.2805</a>.</p>
 </div>
 <div>
-<p>Pebesma, Edzer. 2020. <em>Sf: Simple Features for R</em>. <a href="https://CRAN.R-project.org/package=sf">https://CRAN.R-project.org/package=sf</a>.</p>
-</div>
-<div>
 <p>Raymond, Eric S. 2003. <em>The Art of Unix Programming (the Addison-Wesley Professional Computng Series)</em>. Addison-Wesley.</p>
 </div>
 <div>
-<p>Roebuck, P. 2014. <em>Matlab: MATLAB Emulation Package</em>. <a href="https://CRAN.R-project.org/package=matlab">https://CRAN.R-project.org/package=matlab</a>.</p>
+<p>Wickham, Hadley. 2019. <em>Advanced R, Second Edition (Chapman &amp; Hall/Crc the R Series)</em>. Chapman; Hall/CRC. <a href="https://www.xarg.org/ref/a/0815384572/">https://www.xarg.org/ref/a/0815384572/</a>.</p>
 </div>
 <div>
-<p>R Special Interest Group on Databases (R-SIG-DB), Hadley Wickham, and Kirill Müller. 2019. <em>DBI: R Database Interface</em>. <a href="https://CRAN.R-project.org/package=DBI">https://CRAN.R-project.org/package=DBI</a>.</p>
-</div>
-<div>
-<p>Rudis, Bob, and Al Danial. 2020. <em>Cloc: Count Lines of Code, Comments and Whitespace in Source Files and Archives</em>. <a href="https://gitlab.com/hrbrmstr/cloc">https://gitlab.com/hrbrmstr/cloc</a>.</p>
-</div>
-<div>
-<p>Ushey, Kevin. 2020. <em>Renv: Project Environments</em>. <a href="https://CRAN.R-project.org/package=renv">https://CRAN.R-project.org/package=renv</a>.</p>
-</div>
-<div>
-<p>Wickham, Hadley. 2020. <em>Testthat: Unit Testing for R</em>. <a href="https://CRAN.R-project.org/package=testthat">https://CRAN.R-project.org/package=testthat</a>.</p>
-</div>
-<div>
-<p>———. 2019. <em>Advanced R, Second Edition (Chapman &amp; Hall/Crc the R Series)</em>. Chapman; Hall/CRC. <a href="https://www.xarg.org/ref/a/0815384572/">https://www.xarg.org/ref/a/0815384572/</a>.</p>
-</div>
-<div>
-<p>Wickham, Hadley, Mara Averick, Jennifer Bryan, Winston Chang, Lucy D’Agostino McGowan, Romain François, Garrett Grolemund, et al. 2019. “Welcome to the tidyverse.” <em>Journal of Open Source Software</em> 4 (43): 1686. <a href="https://doi.org/10.21105/joss.01686">https://doi.org/10.21105/joss.01686</a>.</p>
-</div>
-<div>
-<p>Wickham, Hadley, and Jennifer Bryan. 2019. <em>Readxl: Read Excel Files</em>. <a href="https://CRAN.R-project.org/package=readxl">https://CRAN.R-project.org/package=readxl</a>.</p>
-</div>
-<div>
-<p>———. 2020. <em>Usethis: Automate Package and Project Setup</em>. <a href="https://CRAN.R-project.org/package=usethis">https://CRAN.R-project.org/package=usethis</a>.</p>
-</div>
-<div>
-<p>Wickham, Hadley, Winston Chang, Lionel Henry, Thomas Lin Pedersen, Kohske Takahashi, Claus Wilke, Kara Woo, Hiroaki Yutani, and Dewey Dunnington. 2020. <em>Ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics</em>. <a href="https://CRAN.R-project.org/package=ggplot2">https://CRAN.R-project.org/package=ggplot2</a>.</p>
+<p>Wickham, Hadley, and Jennifer Bryan. 2020. <em>Usethis: Automate Package and Project Setup</em>. <a href="https://CRAN.R-project.org/package=usethis">https://CRAN.R-project.org/package=usethis</a>.</p>
 </div>
 <div>
 <p>Wickham, Hadley, Romain François, Lionel Henry, and Kirill Müller. 2020. <em>Dplyr: A Grammar of Data Manipulation</em>. <a href="https://CRAN.R-project.org/package=dplyr">https://CRAN.R-project.org/package=dplyr</a>.</p>
@@ -402,19 +249,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <p>Wickham, Hadley, and Jim Hester. 2020. <em>Pkgbuild: Find Tools Needed to Build R Packages</em>. <a href="https://CRAN.R-project.org/package=pkgbuild">https://CRAN.R-project.org/package=pkgbuild</a>.</p>
 </div>
 <div>
-<p>Wickham, Hadley, Jim Hester, and Winston Chang. 2020. <em>Devtools: Tools to Make Developing R Packages Easier</em>. <a href="https://CRAN.R-project.org/package=devtools">https://CRAN.R-project.org/package=devtools</a>.</p>
-</div>
-<div>
-<p>Wickham, Hadley, Jim Hester, Kirill Müller, and Daniel Cook. 2017. <em>Memoise: Memoisation of Functions</em>. <a href="https://CRAN.R-project.org/package=memoise">https://CRAN.R-project.org/package=memoise</a>.</p>
-</div>
-<div>
-<p>Wickham, Hadley, and Edgar Ruiz. 2020. <em>Dbplyr: A ’Dplyr’ Back End for Databases</em>. <a href="https://CRAN.R-project.org/package=dbplyr">https://CRAN.R-project.org/package=dbplyr</a>.</p>
-</div>
-<div>
 <p>Xie, Yihui. 2020. <em>Bookdown: Authoring Books and Technical Documents with R Markdown</em>. <a href="https://CRAN.R-project.org/package=bookdown">https://CRAN.R-project.org/package=bookdown</a>.</p>
-</div>
-<div>
-<p>Xie, Yihui, Joe Cheng, and Xianying Tan. 2020. <em>DT: A Wrapper of the Javascript Library ’Datatables’</em>. <a href="https://CRAN.R-project.org/package=DT">https://CRAN.R-project.org/package=DT</a>.</p>
 </div>
 </div>
 </div>
