ColinFay published a site update

--- a/successfulshinyapp.html
+++ b/successfulshinyapp.html
@@ -209,7 +209,7 @@ And that is probably one of the main reason why this package has become so succe
 <p>The first version of <code>{shiny}</code> was published in 2012.
 Since then, it has been one of the top project of the RStudio team.
 At the time of writing these lines (April 2020), there are more than 4700 commits in the master branch of the GitHub repository, made by 46 contributors.
-It is now downloaded around 400K times a month, according to <a href="https://cranlogs.r-pkg.org/badges/shiny">cranlogs</a>, and has 733 reverse dependencies (i.e packages that depend on it), according to <code>revdep("shiny")</code> from <code>{devtools}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-devtools"><strong>???</strong></span>)</span>.</p>
+It is now downloaded around 400K times a month, according to <a href="https://cranlogs.r-pkg.org/badges/shiny">cranlogs</a>, and has 734 reverse dependencies (i.e packages that depend on it), according to <code>revdep("shiny")</code> from <code>{devtools}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-devtools"><strong>???</strong></span>)</span>.</p>
 <p>If you are very new to Shiny, this book might feel a little bit overwhelming: we will be discussing some advance <code>{shiny}</code> production methods, best practices and structural idea for sending Shiny applications to production.
 This books relies on the assumption that you already know how to build basic Shiny applications, and that you want to push your Shiny skills to the next level: in other words, you are ready to move from the Proof of Concept to the production-grade application.
 If you are very new to Shiny, we suggest you start with the <a href="https://mastering-shiny.org/">Mastering Shiny book</a> before reading the present book.</p>
@@ -294,7 +294,7 @@ But before that, let’s dive into code complexity.</p>
 <p>The total number of lines of code, or the number of files, can be good clue of potential complexity, but only if used as order ofs magnitude (for example a 10.000-line codebase is potentially more complex than a 100-line codebase), but should not be relied on if used strictly: even more if you try to reduce this number of line by sacrificing code readability.</p>
 <p>R is very permissive when it comes to indentation and line breaks, and, unlike JavaScript or CSS, it is generally not minified.<a href="#fn6" class="footnote-ref" id="fnref6"><sup>6</sup></a><br />
 In R, the number of lines of code depends on your coding style and the packages you are using.
-For example, the <code>{tidyverse}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="tidyverse2019"><strong>???</strong></span>)</span> style guide encourages the use of <code>%&gt;%</code> (called “pipe”), with one function by line, producing more lines in the end code : _“<code>%&gt;%</code> should always have a space before it, and should usually be followed by a new line_” <a href="https://style.tidyverse.org/pipes.html" target="_blank">tidyverse style guide</a>.
+For example, the <code>{tidyverse}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="tidyverse2019"><strong>???</strong></span>)</span> style guide encourages the use of <code>%&gt;%</code> (called “pipe”), with one function by line, producing more lines in the end code : “<em><code>%&gt;%</code> should always have a space before it, and should usually be followed by a new line</em>” <a href="https://style.tidyverse.org/pipes.html" target="_blank">tidyverse style guide</a>.
 So you can expect a “tidyverse-centric” package to contain more line of code, yet the pipe itself has been thought as a tool to lower code complexity by enhancing its readability<a href="#fn7" class="footnote-ref" id="fnref7"><sup>7</sup></a>.
 For example, the two following pieces of code do the same thing.
 Both have a different number of lines, and a different level of reading complexity.</p>
@@ -743,7 +743,7 @@ Delivering is not the only thing to keep in mind: you can deliver a working app 
 </div>
 <div id="it-is-usable" class="section level3">
 <h3><span class="header-section-number">1.3.3</span> It is usable</h3>
-<p>being usable means that the app was delivered, it serves the purpose, and it is user-friendly.
+<p>Being usable means that the app was delivered, it serves the purpose, and it is user-friendly.
 Unless you are coding for art sake, there will always be one or more end users.
 And if these people cannot use the application because it is too hard to use, too hard to understand, because it is too slow or there is no inherent logic in how the user experience is designed, then it is inappropriate to call the app is a success.</p>
 </div>
