--- a/when-optimize.html
+++ b/when-optimize.html
@@ -280,11 +280,11 @@ Of course, the C++ function is faster than the R one—this is the very reason o
 <pre><code>[90m# A tibble: 2 x 6[39m
   expression    min median `itr/sec` mem_alloc `gc/sec`
   [3m[90m&lt;bch:expr&gt;[39m[23m [3m[90m&lt;bch:&gt;[39m[23m [3m[90m&lt;bch:&gt;[39m[23m     [3m[90m&lt;dbl&gt;[39m[23m [3m[90m&lt;bch:byt&gt;[39m[23m    [3m[90m&lt;dbl&gt;[39m[23m
-[90m1[39m cpp         143µs  449µs     [4m2[24m479.     784KB     32.7
-[90m2[39m native      418µs  455µs     [4m2[24m122.        0B      0  </code></pre>
+[90m1[39m cpp         164µs  459µs     [4m2[24m380.   783.8KB     31.3
+[90m2[39m native      453µs  460µs     [4m2[24m089.    22.7KB      0  </code></pre>
 <p>(Note: we will come back to <code>bench::mark</code> later)</p>
 <p>Though, how much time gain is worth being sure you will get someone in your team to take over the maintenance if needed?
-In other words, given that (in our example), we are gaining around -5.722510^{-6} on the execution time of our function, is it worth switching to C++?
+In other words, given that (in our example), we are gaining around -1.41110^{-6} on the execution time of our function, is it worth switching to C++?
 Using external languages or complex data structures implies that from the start, you will need to think about who and how your code base will be maintain over the years.
 Chances are that if you plan on using a Shiny application during a span of several years, various R developers will be working on the project, and including C++ code inside your application means that these future developer will either be required to know C++, or they will not be able to maintain this piece of code.</p>
 <p>So, to sum up, there are three ways to optimize your application &amp; R code, and the bad news is that you can not optimize for all of them:</p>
@@ -458,8 +458,8 @@ Note that by default, the <code>mark()</code> function compares the output of ea
 <pre><code>[90m# A tibble: 2 x 6[39m
   expression     min  median `itr/sec` mem_alloc
   [3m[90m&lt;bch:expr&gt;[39m[23m [3m[90m&lt;bch:t&gt;[39m[23m [3m[90m&lt;bch:t&gt;[39m[23m     [3m[90m&lt;dbl&gt;[39m[23m [3m[90m&lt;bch:byt&gt;[39m[23m
-[90m1[39m for        50.39µs  53.7µs    [4m1[24m[4m8[24m407.    30.4KB
-[90m2[39m vectorized  4.02µs  4.83µs   [4m1[24m[4m2[24m[4m7[24m954.    11.8KB
+[90m1[39m for        54.44µs 55.08µs    [4m1[24m[4m6[24m972.    30.4KB
+[90m2[39m vectorized  4.64µs  5.16µs   [4m1[24m[4m2[24m[4m0[24m501.    11.8KB
 [90m# … with 1 more variable: `gc/sec` [3m[90m&lt;dbl&gt;[90m[23m[39m</code></pre>
 <p>Here, we have an empiric evidence that one code is faster than the other: by benchmarking the speed of our code, we are able to determine which function is the fastest.</p>
 <p>If you want a graphical analysis, <code>{bench}</code> comes with an <code>autoplot</code> method for <code>{ggplot2}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-ggplot2"><strong>???</strong></span>)</span>:</p>
