ColinFay published a site update

--- a/planning.html
+++ b/planning.html
@@ -242,7 +242,7 @@ If you go for an exotic solution or a complex technology, be sure that you are d
 </div>
 <div id="working-as-a-team-tools-organisation" class="section level2">
 <h2><span class="header-section-number">2.2</span> Working as a team: tools &amp; organisation</h2>
-<p>Working as a team, whatever the coding project, requires adequate tools, discipline and organisation.
+<p>Working as a team, whatever the coding project, requires adequate tools, discipline and organization.
 Complex Shiny Apps usually imply that several people will work on the application.
 For example, at <a href="//rtask.thinkr.fr">ThinkR</a>, 3 to 4 people usually work in parallel on the same application, but there might be more people involved on larger projects.
 The choice of tools and organisation is crucial for a successful application.</p>
