--- a/workflow.html
+++ b/workflow.html
@@ -194,13 +194,13 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <h1><span class="header-section-number">Chapter 5</span> The workflow</h1>
 <p>Building a robust, production-ready web application will be made easier by following a given workflow.
 The one we are advocating for is divided in five steps: Design, Prototype, Build, Strenghten and Deploy.
-In this section, we will give an overview of the different steps of this workflow: the rest of the book will cover each of these steps in more depth.</p>
+In this section, we will give an overview of the different steps of this workflow: the rest of the book will cover in more depth each of these steps.</p>
 <div id="part-1-design" class="section level2">
 <h2><span class="header-section-number">5.1</span> Part 1: Design</h2>
 <p>The first part of the workflow is the <strong>design</strong> part.
 This first step of the process is the one that happens, before actually writing any line of code.</p>
 <p>This first step is not Shiny nor R specific, but something software engineers do for any software or web application: discuss with the clients, the end-users, and the developers who will work on the project.</p>
-<p>During the process of designing, you will define how the application will be built: somewhere between users’ dreams, what is technically possible, and the time you have to build the application.</p>
+<p>During the process of designing, you will define how the application will be build: somewhere between users’ dreams, what is technically possible, and the time you have to build the application.</p>
 </div>
 <div id="part-2-prototype" class="section level2">
 <h2><span class="header-section-number">5.2</span> Part 2: Prototype</h2>
@@ -208,10 +208,10 @@ This first step of the process is the one that happens, before actually writing 
 <p>As you may know, a Shiny application is an interface (the front-end) used to communicate information to the end-users that are computed on the server side (the back-end).</p>
 <p>To start on solid ground, you need to build the two (front and back) seperately:</p>
 <ul>
-<li><p>On one hand, work on the general appearance, without working on any actual algorithmic implementation: position of the inputs and outputs, general design, interactions, etc. everything that does not rely on computation on the back end.
-This “UI first” approach will be made possible for Shiny with notably one package, <code>{shinipsum}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-shinipsum"><strong>???</strong></span>)</span>, and tools like basic CSS, and some <code>{golem}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-golem"><strong>???</strong></span>)</span> functions.</p></li>
+<li><p>On one hand, work on the general appearance, without working on any actual algorithmic implementation: position of the inputs and outputs, general design, interactions…. everything that does not rely on computation on the back end.
+This “UI first” approach will be made possible for Shiny with notably one package, <code>{shinipsum}</code> <span class="citation">(Fay and Rochette <a href="#ref-R-shinipsum" role="doc-biblioref">2020</a><a href="#ref-R-shinipsum" role="doc-biblioref">b</a>)</span>, and tools like basic CSS, and some <code>{golem}</code> <span class="citation">(Guyader et al. <a href="#ref-R-golem" role="doc-biblioref">2020</a>)</span> functions.</p></li>
 <li><p>On the other hand, you (or someone from your team), will be working on building the back-end logic, which are the actual outputs that are going to be displayed, the algorithm that will compute results, and all the elements that do not need an interactive runtime to work.
-For this point, you can use what we call a “Rmd-first” approach, by combining R functions with the writing of Vignettes that describes the internals of the application.</p></li>
+For this point, you can use what we call a “Rmd-first” approach, by combining R functions with the writing of Vignettes that describes the internal of the application.</p></li>
 </ul>
 </div>
 <div id="part-3-build" class="section level2">
@@ -235,6 +235,15 @@ In this third part, you will work on the core engine of the application, making 
 
 
 
+<h3>References</h3>
+<div id="refs" class="references">
+<div id="ref-R-shinipsum">
+<p>Fay, Colin, and Sebastien Rochette. 2020b. <em>Shinipsum: Lorem-Ipsum-Like Helpers for Fast Shiny Prototyping</em>. <a href="https://github.com/Thinkr-open/shinipsum">https://github.com/Thinkr-open/shinipsum</a>.</p>
+</div>
+<div id="ref-R-golem">
+<p>Guyader, Vincent, Colin Fay, Sébastien Rochette, and Cervan Girard. 2020. <em>Golem: A Framework for Robust Shiny Applications</em>. <a href="https://github.com/ThinkR-open/golem">https://github.com/ThinkR-open/golem</a>.</p>
+</div>
+</div>
 <hr/>
 <footer>
 <a href="rtask.thinkr.fr"><img src="img/logo400_129.png" alt="ThinkR Website"/></a>
